Added toastr notifications. Admin can now lock users from logging in. Need to implement role management for users

--- a/Habit App/Areas/User/Views/Home/Index.cshtml
+++ b/Habit App/Areas/User/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
         <h3>List of all habits</h3>
     </div>
     <div class="col-3">
-        <a asp-action="create" class="btn btn-primary">+</a>
+        <a asp-area="User" asp-controller="Habit" asp-action="Index" class="btn btn-primary">+</a>
     </div>
     @foreach (var habit in Model.UserHabits)
     {
