--- a/Habit App/Areas/Admin/Views/UserManage/Index.cshtml
+++ b/Habit App/Areas/Admin/Views/UserManage/Index.cshtml
@@ -1,5 +1,46 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿﻿<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient ml-0 py-3 ">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">User List</h2>
+            </div>
+        </div>
+
+    </div>
+    <div class="card-body p-4">
+        
+
+        <table id="tblData" class="table table-bordered table-striped" style="width:100%">
+            <thead>
+                <tr>
+                    
+
+                    <th>
+                        Email
+                    </th>
+                    <th>
+                        Phone No
+                    </th>
+
+                    <th>
+                        Role
+                    </th>
+                    <th>
+
+                    </th>
+                </tr>
+            </thead>
+
+
+        </table>
+    </div>
+</div>
+<div class="container">
+
+</div>
+@section Scripts{
+    <script src="~/js/userIndexTable.js"></script> 
+
+
+
 }
